# NewBit

./: .gitignore  CMakeLists.txt  CMakeSettings.json
CoreEngines/: CMakeLists.txt  connect.cpp
CoreEngines/TestEngine/: CMakeLists.txt
CoreEngines/TestEngine/src/: TestEngine.cpp  TestEngine.h  connect.cpp  stdafx.h
CoreEngines/src/: CameraComponent.cpp  CameraComponent.h  ChunkCacheEngine.cpp  ChunkCacheEngine.h  ChunkLoadStateChanger.cpp  ChunkLoadStateChanger.h  ChunkLoader.cpp  ChunkLoader.h  ChunkSystem.cpp  ChunkSystem.h  ChunkUnloader.cpp  ChunkUnloader.h  DemoEditGameState.cpp  DemoEditGameState.h  EntityFactories.cpp  EntityFactories.h  EntityFactoryManager.cpp  EntityTrackerScreenGameState.cpp  EntityTrackerScreenGameState.h  GraphicsEngine.cpp  GraphicsEngine.h  GuiEngine.cpp  GuiEngine.h  HealthComponent.cpp  HealthComponent.h  InitEngine.cpp  InitEngine.h  InputEngine.cpp  InputEngine.h  Inventory.cpp  Inventory.h  InventoryComponent.cpp  InventoryComponent.h  Item.cpp  ItemComponent.cpp  ItemComponent.h  ItemManager.cpp  ItemManager.h  NeedsComponent.cpp  NeedsComponent.h  (+55 more)
NewBitCore/: CMakeLists.txt
NewBitCore/src/: Core.cpp  Core.h  CoreEngine.h  CoreEngineManager.cpp  CoreEngineManager.h  CoreRef.h  CoreRefs.h  GameState.h  GameStateManager.cpp  GameStateManager.h  MultithreadingManager.cpp  MultithreadingManager.h  main.cpp  stdafx.h
NewBitEntity/: CMakeLists.txt
NewBitEntity/src/: Component.cpp  Component.h  ComponentAlreadyExistsException.cpp  ComponentAlreadyExistsException.h  ComponentDoesNotExistException.cpp  ComponentDoesNotExistException.h  Entity.cpp  Entity.h  EntityAlreadyInitializedException.cpp  EntityAlreadyInitializedException.h  EntityDoesNotExistException.cpp  EntityDoesNotExistException.h  EntityManager.cpp  EntityManager.h  System.cpp  System.h  SystemAlreadyExistsException.cpp  SystemAlreadyExistsException.h  SystemDoesNotExistException.cpp  SystemDoesNotExistException.h  SystemManager.cpp  SystemManager.h  SystemManagerAlreadyInitializedException.cpp  SystemManagerAlreadyInitializedException.h  UpdateOrder.h  World.cpp  World.h  stdafx.h  typedefs.h
NewBitEntityTest/: CMakeLists.txt
NewBitEntityTest/src/: TestComponent.cpp  TestComponent.h  TestSystem.cpp  TestSystem.h  main.cpp  stdafx.h
NewBitPackageManager/: CMakeLists.txt
NewBitPackageManager/src/: File.h  Meta.cpp  Meta.h  MetaFile.cpp  MetaFile.h  Package.cpp  Package.h  PackageId.cpp  PackageId.h  PackageManager.cpp  PackageManager.h  stdafx.h
NewBitPackageManagerTest/: CMakeLists.txt
NewBitPackageManagerTest/src/: main.cpp
NewBitSignals/: CMakeLists.txt
NewBitSignals/src/: Connection.h  Signal.cpp  Signal.h  Trackable.h  easy_bind.h  stdafx.h
NewBitSignalsTest/: CMakeLists.txt
NewBitTexturePacker/: CMakeLists.txt
NewBitTexturePacker/src/: NewBitTexturePacker.h  PackedTexture.cpp  PackedTexture.h  PackedTextureDuplicateException.h  PackedTextureGenerationStateException.cpp  PackedTextureGenerationStateException.h  TexturePacker.h  TextureReference.cpp  TextureReference.h  TextureTooLargeException.cpp  id.h  stdafx.h
NewBitTexturePackerTest/: CMakeLists.txt
NewBitTexturePackerTest/src/: main.cpp  stdafx.h
binaryFiles/data/debug_packageManager/NewPackage/: textfile._meta  textfile.txt
build_packages/: CMakeLists.txt
enc_temp_folder/de219057a9579e7b6a803c38cdef6f4e/: CameraComponent.cpp
libraries/: CMakeLists.txt  build_dependencies.bat  build_dependencies_x64-debug.bat  build_dependencies_x64-release.bat  build_dependencies_x64-relwithdb.bat  build_dependencies_x86-debug.bat  build_dependencies_x86-release.bat  build_dependencies_x86-relwithdb.bat
notes/: PackageMetaFormat.txt  PackageStructure.txt
src/: CMakeLists.txt  CMakeSettings.json
src/CoreEngines/: BaseGameState.cpp  BaseGameState.h  CMakeLists.txt  CameraComponent.cpp  CameraComponent.h  ChunkCache.cpp  ChunkCache.h  ChunkLoadState.h  ChunkLoadStateChanger.cpp  ChunkLoadStateChanger.h  ChunkLoader.cpp  ChunkLoader.h  ChunkSystem.cpp  ChunkSystem.h  ChunkUnloader.cpp  ChunkUnloader.h  ComponentCache.h  DefaultFoodItem.cpp  DefaultFoodItem.h  DefaultFoodItemFactory.cpp  DefaultFoodItemFactory.h  DefaultItem.cpp  DefaultItem.h  DefaultItemFactory.cpp  DefaultItemFactory.h  DefaultWorldGenerator.cpp  DefaultWorldGenerator.h  DemoEditGameState.cpp  DemoEditGameState.h  EntityFactories.cpp  EntityFactories.h  EntityFactory.cpp  EntityFactory.h  EntityFactoryManager.cpp  EntityFactoryManager.h  EntityRenderer.cpp  EntityRenderer.h  EntityTrackerScreenGameState.cpp  EntityTrackerScreenGameState.h  Factory.h  (+89 more)
src/NewBitCore/: CMakeLists.txt  Core.cpp  Core.h  CoreEngine.h  CoreEngineManager.cpp  CoreEngineManager.h  GameState.h  GameStateManager.cpp  GameStateManager.h  _PluginCreator.h  stdafx.h
src/NewBitEntity/: CMakeLists.txt  ComponentDoesNotExistException.cpp  Entity.h  EntityManager.h  SystemDoesNotExistException.cpp  SystemManager.cpp  SystemManager.h  SystemManagerAlreadyInitializedException.h  stdafx.h
src/NewBitEntityTest/: CMakeLists.txt  TestComponent.cpp  TestSystem.cpp  TestSystem.h  main.cpp  stdafx.h
src/NewBitPackageManager/: CMakeLists.txt  MetaFile.h  Package.cpp  Package.h  PackageId.cpp  PackageId.h  PackageManager.h  stdafx.h
src/NewBitPackageManagerTest/: CMakeLists.txt  main.cpp  stdafx.h
src/NewBitSignals/: CMakeLists.txt  Connection.cpp  Signal.h  stdafx.h
src/NewBitSignalsTest/: CMakeLists.txt  main.cpp
src/NewBitTexturePacker/: CMakeLists.txt  PackedTexture.cpp  PackedTexture.h  PackedTextureDuplicateException.cpp  PackedTextureGenerationStateException.h  TextureTooLargeException.cpp  TextureTooLargeException.h  id.h
src/NewBitTexturePackerTest/: CMakeLists.txt  main.cpp  stdafx.h
src/TguiDemo/: CMakeLists.txt  main.cpp
