set(EXECUTABLE_NAME CoreEngines)

FILE(GLOB_RECURSE HEADER_FILES *.h)
FILE(GLOB_RECURSE SOURCE_FILES *.cpp)
add_library(${EXECUTABLE_NAME} SHARED ${HEADER_FILES} ${SOURCE_FILES})

target_link_libraries(${EXECUTABLE_NAME} NewBitCore)
nb_target_add_libraries(${EXECUTABLE_NAME})

add_custom_command(
	TARGET ${EXECUTABLE_NAME} POST_BUILD
	COMMAND ${CMAKE_COMMAND} -E copy
			$<TARGET_FILE:${EXECUTABLE_NAME}>
			$<TARGET_FILE_DIR:${EXECUTABLE_NAME}>/bin/${EXECUTABLE_NAME}.dll)